--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--class is an attribute to name our div-->
     <div class="container-fluid">
       <!--Navbar-->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">JahTech</a>
           <button
