My second commit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ja Suhot | Web Developer Portfolio</title>
+    <title>Jah Cool | Web Developer Portfolio</title>
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -64,7 +64,7 @@
       <!--id is an attribute to name a tag uniquely-->
       <section id="landing" class="text-center img-fluid mt-5">
         <h1>Full Stack Web Developer</h1>
-        <p>Hi! My name is Ja and I love building things from scratch.</p>
+        <p>Hi! My name is Jah Love and I love building things from scratch.</p>
         <img src="images/mypic.png" alt="myprofilepic" id="profile" />
 
         <a
@@ -75,8 +75,8 @@
       </section>
 
       <section id="about">
-        <div class="container-fluid">
-            <h2>About</h2>
+        <div class="container-fluid pt-5 ">
+            <h2 class="mt-5">About</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero at vero commodi cumque voluptatem reprehenderit obcaecati voluptate deleniti labore exercitationem illum veritatis consequatur impedit et sapiente nostrum asperiores, similique ex.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero at vero commodi cumque voluptatem reprehenderit obcaecati voluptate deleniti labore exercitationem illum veritatis consequatur impedit et sapiente nostrum asperiores, similique ex.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero at vero commodi cumque voluptatem reprehenderit obcaecati voluptate deleniti labore exercitationem illum veritatis consequatur impedit et sapiente nostrum asperiores, similique ex.</p>
@@ -86,15 +86,15 @@
       </section>
 
       <section id="projects">
-        <div class="container-fluid">
-            <h2>Projects</h2>
+        <div class="container-fluid pt-5" >
+            <h2 class="mt-5">Projects</h2>
             <p class="text-center">Working now, please stay for updates!</p>
         </div>
       </section>
 
       <section id="contact">
-        <div class="container-fluid">
-            <h2>Contact</h2>
+        <div class="container-fluid pt-5">
+            <h2 class="mt-5">Contact</h2>
             <p class="text-center">Get in touch with us.</p>
             <!-- <form class="text-center">
                 <div class="mb-3">
